[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Enemies/Tank/TankProjectile.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Abstract/ParticlesCache/Materials/EnemyProjectile.tres" type="Material" id=2]
[ext_resource path="res://Scenes/Characters/Enemies/TankEnemy/EnemyProjectile.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.65777, 2.8336 )

[node name="EnemyProjectile" type="Area2D"]
modulate = Color( 1, 1.45, 1, 1 )
show_behind_parent = true
collision_layer = 16
collision_mask = 3
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -8.08151, 0.159241 )
shape = SubResource( 1 )

[node name="TrailParticles2D" type="Particles2D" parent="."]
modulate = Color( 1, 1.1, 1, 1 )
amount = 10
lifetime = 0.25
explosiveness = 0.2
local_coords = false
process_material = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -21.0199, 0.179145 )
scale = Vector2( 0.207771, 0.209762 )
[connection signal="area_entered" from="." to="." method="_on_EnemyProjectile_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
